--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Webstudio</title>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container">
         <div class="container-navigation">
           <nav class="navigation">
@@ -66,9 +66,9 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
     <main class="main">
-      <section class="section-hero">
+      <!-- <section class="section-hero">
         <div class="container">
           <h1 class="section-hero-title">
             Effective Solutions for Your Business
@@ -77,7 +77,7 @@
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
@@ -133,7 +133,7 @@
           </ul>
         </div>
       </section>
-      <section class="work">
+      <!-- <section class="work">
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
           <ul class="work-title-list">
@@ -152,8 +152,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="team">
+      </section> -->
+      <!-- <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -335,8 +335,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="customers">
+      </section> -->
+      <!-- <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list">
@@ -384,9 +384,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container-all">
           <div class="footer-container">
@@ -452,8 +452,8 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+    </footer> -->
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -538,7 +538,7 @@
           <button type="submit" class="modal-form-submit-btn">Send</button>
         </form>
       </div>
-    </div>
-    <script src="./modal.js"></script>
+    </div> -->
+    <!-- <script src="./modal.js"></script> -->
   </body>
 </html>
