--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </button>
         </div>
       </section> -->
-      <section class="advantages">
+      <!-- <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
@@ -132,7 +132,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- <section class="work">
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
