--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           </ul>
         </div>
       </section> -->
-      <!-- <section class="customers">
+      <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list">
@@ -384,7 +384,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container">
