--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           </ul>
         </div>
       </section> -->
-      <section class="customers">
+      <!-- <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list">
@@ -385,7 +385,7 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
     <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container-all">
