--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="work">
+      </section>
+      <section class="work">
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
           <ul class="work-title-list">
@@ -153,7 +153,7 @@
           </ul>
         </div>
       </section> -->
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -384,8 +384,9 @@
             </li>
           </ul>
         </div>
-      </section>
-    </main> -->
+      </section> -->
+    </main>
+    -->
     <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container-all">
