--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Webstudio</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container">
         <div class="container-navigation">
           <nav class="navigation">
@@ -66,7 +66,7 @@
           </ul>
         </div>
       </div>
-    </header> -->
+    </header>
     <main class="main">
       <!-- <section class="section-hero">
         <div class="container">
@@ -153,7 +153,7 @@
           </ul>
         </div>
       </section> -->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
