--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
               <li><a class="link-navigation" href="#">Contacts</a></li>
             </ul>
           </nav>
+          <button class="btn-burger" type="button">
+            <svg class="burger-icon" width="32" height="22">
+              <use
+                class="nav-contacts-icon"
+                href="./images/icons.svg.svg#burger-icon"
+              ></use></svg
+          </button>
           <ul class="navigation-contacts-list">
             <li class="contacts-list">
               <a class="link-contacts" href="tel:+110001111111"
