--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <button class="btn-burger" type="button">
             <svg class="burger-icon" width="32" height="22">
               <use
-                class="nav-contacts-icon"
+                class="btn-burger-icon"
                 href="./images/icons.svg.svg#burger-icon"
               ></use></svg
           </button>
