--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </ul>
           </nav>
           <button class="btn-burger" type="button">
-            <svg class="burger-icon" width="32" height="22">
+            <svg class="burger-icon" width="40" height="40">
               <use
                 class="btn-burger-icon"
                 href="./images/icons.svg.svg#burger-icon"
-              ></use></svg
+              ></use></svg>
           </button>
           <ul class="navigation-contacts-list">
             <li class="contacts-list">
