--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
               <use
                 class="btn-burger-icon"
                 href="./images/icons.svg.svg#burger-icon"
-              ></use></svg>
+              ></use>
+            </svg>
           </button>
           <ul class="navigation-contacts-list">
             <li class="contacts-list">
@@ -69,6 +70,38 @@
                     href="./images/icons.svg.svg#icon-envelop"
                   ></use></svg
               ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="mobile-menu">
+        <div class="container mobile-menu-container">
+          <button class="mobile-button-close" type="button">
+            <svg class="mobile-button-close-icon" width="8" height="8">
+              <use href="./images/icons.svg.svg#icon-close-black"></use>
+            </svg>
+          </button>
+          <ul class="mobile-menu-list">
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-link" href="./index.html">Studio</a>
+            </li>
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-link" href="#">Contacts</a>
+            </li>
+          </ul>
+          <ul class="mobile-contacts-list">
+            <li class="mobile-contacts">
+              <a class="mobile-link-contacts" href="tel:+110001111111"
+                >+11 (000) 111-11-11
+              </a>
+            </li>
+            <li class="mobile-contacts">
+              <a class="mobile-link-contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com
+              </a>
             </li>
           </ul>
         </div>
@@ -547,6 +580,7 @@
         </form>
       </div>
     </div> -->
+    <script src="./mobile-menu.js"></script>
     <!-- <script src="./modal.js"></script> -->
   </body>
 </html>
