--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <li><a class="link-navigation" href="#">Contacts</a></li>
             </ul>
           </nav>
-          <button class="btn-burger" type="button">
+          <button class="btn-burger" type="button" data-menu-open>
             <svg class="burger-icon" width="40" height="40">
               <use
                 class="btn-burger-icon"
@@ -74,22 +74,22 @@
           </ul>
         </div>
       </div>
-      <div class="mobile-menu">
+      <div class="mobile-menu" data-menu>
         <div class="container mobile-menu-container">
-          <button class="mobile-button-close" type="button">
+          <button class="mobile-button-close" type="button" data-menu-close>
             <svg class="mobile-button-close-icon" width="8" height="8">
               <use href="./images/icons.svg.svg#icon-close-black"></use>
             </svg>
           </button>
           <ul class="mobile-menu-list">
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link" href="./index.html">Studio</a>
+              <a class="mobile-menu-link link current" href="./index.html">Studio</a>
             </li>
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link" href="./portfolio.html">Portfolio</a>
+              <a class="mobile-menu-link link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link" href="#">Contacts</a>
+              <a class="mobile-menu-link link current" href="#">Contacts</a>
             </li>
           </ul>
           <ul class="mobile-contacts-list">
