--- a/index.html
+++ b/index.html
@@ -83,10 +83,14 @@
           </button>
           <ul class="mobile-menu-list">
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link link current" href="./index.html">Studio</a>
+              <a class="mobile-menu-link link current" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link link current" href="./portfolio.html">Portfolio</a>
+              <a class="mobile-menu-link link current" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="mobile-menu-list-item">
               <a class="mobile-menu-link link current" href="#">Contacts</a>
@@ -104,6 +108,38 @@
               </a>
             </li>
           </ul>
+          <div class="contacts-social-list-container">
+            <ul class="contacts-social-list">
+              <li class="social-list-contacts">
+                <a href="#" class="social-link">
+                  <svg class="social-link-icon" width="16" height="16">
+                    <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-contacts">
+                <a href="#" class="social-link">
+                  <svg class="social-link-icon" width="16" height="16">
+                    <use href="./images/icons.svg.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-contacts">
+                <a href="#" class="social-link">
+                  <svg class="social-link-icon" width="16" height="16">
+                    <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-contacts">
+                <a href="#" class="social-link">
+                  <svg class="social-link-icon" width="16" height="16">
+                    <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
