--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
           </button>
           <ul class="mobile-menu-list">
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link link current" href="./index.html"
+              <a class="mobile-menu-link link" href="./index.html"
                 >Studio</a
               >
             </li>
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link link current" href="./portfolio.html"
+              <a class="mobile-menu-link link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -96,19 +96,19 @@
               <a class="mobile-menu-link link current" href="#">Contacts</a>
             </li>
           </ul>
-          <ul class="mobile-contacts-list">
-            <li class="mobile-contacts">
-              <a class="mobile-link-contacts" href="tel:+110001111111"
-                >+11 (000) 111-11-11
-              </a>
-            </li>
-            <li class="mobile-contacts">
-              <a class="mobile-link-contacts" href="mailto:info@devstudio.com"
-                >info@devstudio.com
-              </a>
-            </li>
-          </ul>
           <div class="contacts-social-list-container">
+            <ul class="mobile-contacts-list">
+              <li class="mobile-contacts">
+                <a class="mobile-link-contacts current" href="tel:+110001111111"
+                  >+11 (000) 111-11-11
+                </a>
+              </li>
+              <li class="mobile-contacts">
+                <a class="mobile-link-contacts" href="mailto:info@devstudio.com"
+                  >info@devstudio.com
+                </a>
+              </li>
+            </ul>
             <ul class="contacts-social-list">
               <li class="social-list-contacts">
                 <a href="#" class="social-link">
@@ -144,7 +144,7 @@
       </div>
     </header>
     <main class="main">
-      <!-- <section class="section-hero">
+      <section class="section-hero">
         <div class="container">
           <h1 class="section-hero-title">
             Effective Solutions for Your Business
@@ -153,8 +153,8 @@
             Order Service
           </button>
         </div>
-      </section> -->
-      <!-- <section class="advantages">
+      </section>
+      <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
@@ -228,8 +228,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="team">
+      </section>
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -411,8 +411,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="customers">
+      </section>
+      <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list">
@@ -460,10 +460,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
-    -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-container-all">
           <div class="footer-container">
@@ -529,8 +528,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    </footer>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -615,8 +614,8 @@
           <button type="submit" class="modal-form-submit-btn">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./mobile-menu.js"></script>
-    <!-- <script src="./modal.js"></script> -->
+    <script src="./modal.js"></script>
   </body>
 </html>
