--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Webstudio</title>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container">
         <div class="container-navigation">
           <nav class="navigation">
@@ -142,7 +142,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
     <main class="main">
       <section class="section-hero">
         <div class="container">
@@ -209,7 +209,7 @@
           </ul>
         </div>
       </section>
-      <section class="work">
+      <!-- <section class="work">
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
           <ul class="work-title-list">
@@ -228,8 +228,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="team">
+      </section> -->
+      <!-- <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -411,8 +411,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="customers">
+      </section> -->
+      <!-- <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list">
@@ -460,9 +460,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container-all">
           <div class="footer-container">
@@ -528,7 +528,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button" type="button" data-modal-close>
