--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </div>
     </header> -->
     <main class="main">
-      <section class="section-hero">
+      <!-- <section class="section-hero">
         <div class="container">
           <h1 class="section-hero-title">
             Effective Solutions for Your Business
@@ -153,8 +153,8 @@
             Order Service
           </button>
         </div>
-      </section>
-      <section class="advantages">
+      </section> -->
+      <!-- <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
@@ -208,7 +208,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- <section class="work">
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
@@ -412,7 +412,7 @@
           </ul>
         </div>
       </section> -->
-      <!-- <section class="customers">
+      <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list">
@@ -460,9 +460,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-container-all">
           <div class="footer-container">
@@ -528,8 +528,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
-    <div class="backdrop is-hidden" data-modal>
+    </footer>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -614,7 +614,7 @@
           <button type="submit" class="modal-form-submit-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./mobile-menu.js"></script>
     <script src="./modal.js"></script>
   </body>
