--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Webstudio</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container">
         <div class="container-navigation">
           <nav class="navigation">
@@ -83,9 +83,7 @@
           </button>
           <ul class="mobile-menu-list">
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link link" href="./index.html"
-                >Studio</a
-              >
+              <a class="mobile-menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="mobile-menu-list-item">
               <a class="mobile-menu-link link" href="./portfolio.html"
@@ -142,9 +140,9 @@
           </div>
         </div>
       </div>
-    </header> -->
+    </header>
     <main class="main">
-      <!-- <section class="section-hero">
+      <section class="section-hero">
         <div class="container">
           <h1 class="section-hero-title">
             Effective Solutions for Your Business
@@ -153,8 +151,8 @@
             Order Service
           </button>
         </div>
-      </section> -->
-      <!-- <section class="advantages">
+      </section>
+      <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
@@ -208,8 +206,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="work">
+      </section>
+      <section class="work">
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
           <ul class="work-title-list">
@@ -228,8 +226,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="team">
+      </section>
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -411,7 +409,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
@@ -529,7 +527,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -614,7 +612,7 @@
           <button type="submit" class="modal-form-submit-btn">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./mobile-menu.js"></script>
     <script src="./modal.js"></script>
   </body>
