--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@
               >
             </li>
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link link current" href="#">Contacts</a>
+              <a class="mobile-menu-link link" href="#">Contacts</a>
             </li>
           </ul>
           <div class="contacts-social-list-container">
             <ul class="mobile-contacts-list">
               <li class="mobile-contacts">
-                <a class="mobile-link-contacts current" href="tel:+110001111111"
+                <a class="mobile-link-contacts-tel" href="tel:+110001111111"
                   >+11 (000) 111-11-11
                 </a>
               </li>
               <li class="mobile-contacts">
-                <a class="mobile-link-contacts" href="mailto:info@devstudio.com"
+                <a class="mobile-link-contacts-mail" href="mailto:info@devstudio.com"
                   >info@devstudio.com
                 </a>
               </li>
