--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
                 </a>
               </li>
               <li class="mobile-contacts">
-                <a class="mobile-link-contacts-mail" href="mailto:info@devstudio.com"
+                <a
+                  class="mobile-link-contacts-mail"
+                  href="mailto:info@devstudio.com"
                   >info@devstudio.com
                 </a>
               </li>
@@ -463,48 +465,51 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-container-all">
-          <div class="footer-container">
-            <a class="footer-logo" href="/"
-              ><span class="web-footer-logo">web</span>studio</a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
+          <div class="media-container">
+            <div class="footer-container">
+              <a class="footer-logo" href="/"
+                ><span class="web-footer-logo">web</span>studio</a
+              >
+              <p class="footer-text">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+            </div>
+            <div class="social-media">
+              <h3 class="social-media-title">Social media</h3>
+              <ul class="social-media-list">
+                <li class="media-list">
+                  <a href="#" class="media-link">
+                    <svg class="media-list-icon" width="24" height="24">
+                      <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="media-list">
+                  <a href="#" class="media-link">
+                    <svg class="media-list-icon" width="24" height="24">
+                      <use href="./images/icons.svg.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="media-list">
+                  <a href="#" class="media-link">
+                    <svg class="media-list-icon" width="24" height="24">
+                      <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="media-list">
+                  <a href="#" class="media-link">
+                    <svg class="media-list-icon" width="24" height="24">
+                      <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="social-media">
-            <h3 class="social-media-title">Social media</h3>
-            <ul class="social-media-list">
-              <li class="media-list">
-                <a href="#" class="media-link">
-                  <svg class="media-list-icon" width="24" height="24">
-                    <use href="./images/icons.svg.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="media-list">
-                <a href="#" class="media-link">
-                  <svg class="media-list-icon" width="24" height="24">
-                    <use href="./images/icons.svg.svg#icon-twitter-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="media-list">
-                <a href="#" class="media-link">
-                  <svg class="media-list-icon" width="24" height="24">
-                    <use href="./images/icons.svg.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="media-list">
-                <a href="#" class="media-link">
-                  <svg class="media-list-icon" width="24" height="24">
-                    <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+
           <form class="footer-form-subscribe">
             <p class="footer-form-text">Subscribe</p>
             <div class="footer-form-container">
