--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </button>
           <ul class="mobile-menu-list">
             <li class="mobile-menu-list-item">
-              <a class="mobile-menu-link link" href="./index.html">Studio</a>
+              <a class="mobile-menu-link-studio link" href="./index.html">Studio</a>
             </li>
             <li class="mobile-menu-list-item">
               <a class="mobile-menu-link link" href="./portfolio.html"
